--- a/Week 1/Solutions/7-Broken-HTML/task.html
+++ b/Week 1/Solutions/7-Broken-HTML/task.html
@@ -123,21 +123,21 @@
 						<h3 class="select">Select a Design:</h3>
 						<nav>
 							<ul>
-								<dt>
+								<li>
 									<a href="/221" class="design-name">Mid Century Modern</a> by						<a href="http://andrewlohman.com/" class="designer-name">Andrew Lohman</a>
-								</dt>
-								<dd>
+								</li>
+								<li>
 									<a href="/220" class="design-name">Garments</a> by						<a href="http://danielmall.com/" class="designer-name">Dan Mall</a>
-								</dd>
-								<ol>
+								</li>
+								<li>
 									<a href="/219" class="design-name">Steel</a> by						<a href="http://steffen-knoeller.de" class="designer-name">Steffen Knoeller</a>
-								</ol>
-								<p>
+								</li>
+								<li>
 									<a href="/218" class="design-name">Apothecary</a> by						<a href="http://trentwalton.com" class="designer-name">Trent Walton</a>
-								</p>
-								<div>
+								</li>
+								<li>
 									<a href="/217" class="design-name">Screen Filler</a> by						<a href="http://elliotjaystocks.com/" class="designer-name">Elliot Jay Stocks</a>
-								</div>
+								</li>
 								<li>
 									<a href="/216" class="design-name">Fountain Kiss</a> by						<a href="http://jeremycarlson.com" class="designer-name">Jeremy Carlson</a>
 								</li>
@@ -155,13 +155,10 @@
 						<nav>
 							<dt>
 								<li class="next">
-									<a href="/214/page1">
-										Next Designs <span class="indicator">›</span>
-									</a>
+									<a href="/214/page1">Next Designs <span class="indicator">›</span></a>
 								</li>
 								<li class="viewall">
-									<a href="http://www.mezzoblue.com/zengarden/alldesigns/" title="View every submission to the Zen Garden.">
-										View All Designs							</a>
+									<a href="http://www.mezzoblue.com/zengarden/alldesigns/" title="View every submission to the Zen Garden."> View All Designs							</a>
 								</li>
 							</dt>
 						</nav>
