--- a/Week 1/Solutions/7-Broken-HTML/task.html
+++ b/Week 1/Solutions/7-Broken-HTML/task.html
@@ -1,10 +1,10 @@
 <!Doctype HTML>
 <HTML>
 	<HEAD>
-		<TITLE> Task 7 </TITLE>
+		<TITLE> My title </TITLE>
 		<META charset="UTF-8">
 	</HEAD>
-	<BODY>
+	<BODY id="css-zen-garden">
 		<h1>My Title</h1>
 		<div class="page-wrapper">
 			<section class="intro" id="css-zen-garden">
@@ -89,7 +89,7 @@
 						and not the latest bleeding-edge tricks viewable by 2% of the browsing public. The only real requirement we have is 
 						that your <abbr title="Cascading Style Sheets">CSS</abbr> validates.
 					</p>
-					<p method="post">
+					<p method="POST">
 						Luckily, designing this way shows how well various browsers have implemented <abbr title="Cascading Style Sheets">CSS</abbr> by now. 
 						When sticking to the guidelines you should see fairly consistent results across most modern browsers. Due to the sheer number of 
 						user agents on the web these days — especially when you factor in mobile — pixel-perfect layouts may not be possible across every platform. 
