--- a/Week 2/Solutions/exercise-6-font-sizes/css-ex6-em-rem.html
+++ b/Week 2/Solutions/exercise-6-font-sizes/css-ex6-em-rem.html
@@ -16,13 +16,13 @@
         }
 		
 		li:nth-child(1){
-			font-size:12px;
+			font-size:1em;
 		}
 		li:nth-child(2){
-			font-size:16px;
+			font-size:1rem;
 		}
 		li:nth-child(3){
-			font-size:18px;
+			font-size:1.5em;
 		}
 		
 		
